[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/UI/dialogbox aseprite.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Main_font_Kenney_Pixel.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/game/ui/dialog_box/dialog_box.gd" type="Script" id=3]

[node name="DialogBox" type="MarginContainer"]
margin_right = 39.0
margin_bottom = 32.0
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 39.0
margin_bottom = 34.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 39.0
margin_bottom = 34.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 31.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_LetterDisplayTimer_timeout"]
